# MeiKen-AI

./: .gitignore  FEATURES.md  README.md  main.py  pyproject.toml
backend/: auth.py  chat.py  database.py  main.py  rag.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  i18n.js  md.js  store.js
frontend/src/assets/: main.css
frontend/src/components/: ChatMessage.vue  LoginPage.vue  MessageInput.vue  ProfilePage.vue  SearchPage.vue  Sidebar.vue  WelcomeScreen.vue
nginx/: meikenai.conf
