[project]
name = "meiken-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.27.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3",
    "uvicorn>=0.50.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
